[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.20", features=["csr"] }
gloo-utils = "*"
gloo = "*"
js-sys = "*"
serde_json = "*"
csv = "*"
wasm-bindgen = "*"


[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "Element", "Node", "Window"]

[dependencies.reqwasm]
version = "0.5.0"
features = ["json"]
